“任意のメッセージ”

--- a/news.html
+++ b/news.html
@@ -120,7 +120,7 @@
   <div class="container">
     <div class="row">
       <div class="four columns sp">
-        <h1><a href="index.html"><img class="u-max-full-width" src="images/logo.png" alt="株式会社サンプル" srcset="images/logo@2x.png 2x" /></a></h1>
+        <h1><a href="index.html"><img class="u-max-full-width" src="images/footer_logo@2x.png" alt="株式会社サンプル" srcset="images/footer_logo@2x.png" /></a></h1>
       </div>
       <!-- columns -->
       <div class="four columns foot_address sp">
