--- a/company.html
+++ b/company.html
@@ -80,8 +80,7 @@
         <div class="row">
 
           <div id="main" class="nine columns">
-              <div class="company_title">会社概要</div>
-            <h2 class="company_title">会社概要</h2>
+             <h2 class="company_title">会社概要</h2>
 
             <table class="u-full-width">
               <tbody><tr>
@@ -147,7 +146,7 @@
   <div class="container">
     <div class="row">
       <div class="four columns sp">
-        <h1><a href="index.html"><img class="u-max-full-width" src="images/logo.png" alt="株式会社サンプル" srcset="images/logo@2x.png 2x" /></a></h1>
+        <h1><a href="index.html"><img class="u-max-full-width" src="images/footer_logo@2x.png" alt="株式会社サンプル" srcset="images/footer_logo@2x.png" /></a></h1>
       </div>
       <!-- columns -->
       <div class="four columns foot_address sp">
