“任意のメッセージ”

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <div id="googlemap_area">
 
-  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyD7Uhlud4P7yqGyCr3SQtRmiZukkNotJKo"></script>
+  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyD0BQINPm26KnSLZR0A-3b48420fGLrs1o"></script>
   <script type="text/javascript">
   function googleMap() {
     var latlng = new google.maps.LatLng(35.6694293,139.7189323);/* 座標 */
@@ -184,8 +184,8 @@
   <div class="container">
     <div class="row">
       <div class="four columns sp">
-        <h1><a href="index.html"><img class="u-max-full-width" src="images/footer_logo@2x.png" alt="株式会社サンプル" srcset="images/footer_logo@2x.png" /></a></h1>
-      </div>
+            <img class="u-max-full-width" src="images/footer_logo.png" alt="株式会社サンプル" srcset="images/footer_logo@2x.png 2x">
+          </div>
       <!-- columns -->
       <div class="four columns foot_address sp">
         〒000-0000<br />
