--- a/news.html
+++ b/news.html
@@ -80,8 +80,8 @@
     <div class="row">
 
       <div id="main" class="nine columns">
+        <div id ="news_area" class="news-page">
           <div class="news_title">ニュースリリース</div>
-
         <ul class="news_li">
           <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
           <li><span>0000-00-00</span>ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
@@ -147,14 +147,15 @@
       </div>
       <!-- columns -->
     </div>
+    
     <!-- row -->
   </div>
 </footer>
 <!-- //footer -->
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
 <script>
   $(function(){
-
     $(document).ready(function(){
 
       $("#sp_navi_btn").click(function () {
@@ -162,7 +163,6 @@
       });
 
     });
-
   });
 </script>
 
